# tweedledum

./: .gitignore  CMakeLists.txt  README.md  setup.py
include/tweedledum/IO/: write_utf8.h
include/tweedledum/IO/qasm/: Lexer.h  PPLexer.h  Parser.h  Token.h  Tokens.def
include/tweedledum/IR/: Circuit.h  Module.h  Node.h  Wire.h  gate_lib.def
include/tweedledum/IR/operations/: w2_op.h  w3_op.h
include/tweedledum/Support/: Angle.h  BitMatrixCM.h  BitMatrixRM.h  NodeMap.h  Source.h  SourceManager.h  foreach.h  hash.h  permute.h
include/tweedledum/Support/detail/: BitMatrix.h
include/tweedledum/algorithms/analysis/: check_layered.h
include/tweedledum/algorithms/decomposition/: barenco.h  ccz.h  decompose.h
include/tweedledum/algorithms/mapping/: jit_map.h  placement.h  sabre_map.h  sat_map.h
include/tweedledum/algorithms/mapping/placement/: hsat_placement.h  line_placement.h  random_placement.h  sat_placement.h
include/tweedledum/algorithms/mapping/routing/: a_star_map.h  jit_router.h  sabre_router.h
include/tweedledum/algorithms/optimization/: gate_cancellation.h  phase_folding.h
include/tweedledum/algorithms/simulation/: simulate_classically.h
include/tweedledum/algorithms/synthesis/: cnot_patel.h  cnot_rz.h  dbs.h  diagonal_synth.h  esop_phase_synth.h  gray_synth.h  linear_synth.h  stg.h  swap_network.h  tbs.h
include/tweedledum/algorithms/synthesis/oracles/: xag_synth.h
include/tweedledum/algorithms/synthesis/token_swap/: a_star_swap.h  parameters.h  sat_swap.h
include/tweedledum/algorithms/utility/: asap_reschedule.h  remove_marked.h  reverse.h  rewrite.h  shallow_duplicate.h  to_logic_network.h
include/tweedledum/algorithms/verification/: map_verify.h  placement_verify.h  unitary_verify.h
include/tweedledum/ir/: Circuit.h  CircuitDAG.h  Gate.h  GateLib.h  MappedDAG.h  Module.h  Netlist.h  Node.h  Operation.h  Storage.h  Unitary.h
include/tweedledum/ir/operations/: wn32_op.h
include/tweedledum/parsers/qasm/: Lexer.h  PPLexer.h  Parser.h  Token.h  Tokens.def
include/tweedledum/support/: DynamicBitset.h  ParityMap.h  Source.h  SourceManager.h
include/tweedledum/views/: ImmutableView.h  LayersView.h
include/tweedledum/writers/: write_qasm.h  write_utf8.h
python/: CMakeLists.txt  mockturtle_export.cpp  tweedledum_export.cpp
python/bindings/: mockturtle.cpp  module.cpp  tweedledum.cpp
python/test/: __init__.py  examples.py  test_parsing.py
python/tweedledum/: __init__.py
python/tweedledum/parser/: __init__.py  logic_network.py  types.py
test/: CMakeLists.txt
test/qasm/: x.qasm
test/unit/: run_tests.cpp
test/unit/algorithms/decomposition/: barenco.cpp  decompose.cpp
test/unit/algorithms/mapping/: initial_map.cpp  jit_map.cpp  sabre_map.cpp  sat_map.cpp  test_circuits.h
test/unit/algorithms/mapping/placement/: hsat_placement.cpp  line_placement.cpp  random_placement.cpp
test/unit/algorithms/optimization/: gate_cancellation.cpp  phase_folding.cpp
test/unit/algorithms/synthesis/: cnot_patel.cpp  cnot_rz.cpp  dbs.cpp  diagonal_synth.cpp  esop_phase_synth.cpp  gray_synth.cpp  linear_synth.cpp  stg.cpp  swap_network.cpp  tbs.cpp
test/unit/algorithms/synthesis/oracles/: xag_synth.cpp
test/unit/algorithms/utility/: asap_reschedule.cpp  to_logic_network.cpp
test/unit/ir/: Circuit.cpp  CircuitDAG.cpp  Gate.cpp  Networks.cpp  Unitary.cpp  Wire.cpp
test/unit/ir/operations/: operations.cpp
test/unit/support/: Angle.cpp
test/unit/views/: LayersView.cpp
test/unit/writers/: write_qasm.cpp
tools/: CMakeLists.txt  qasm.cpp
